feat: backport to 1.16